--- a/config.yaml
+++ b/config.yaml
@@ -3,4 +3,5 @@ database_dialect: "sqlite"
 database_connect_string: "/db.sqlite"
 rest_endpoint: "http://127.0.0.1:5000/v1"
 uploap_folder: "/tmp/flask"
+content_folder: "/tmp/daic"
 
